@@ -247,7 +247,8 @@
 #define OP_NETWRITE		0x22
 #define OP_NETCLOSE		0x23
 #define OP_NETDATA		0x24
-#define OP_KILL		0x25
+#define OP_NETADDRESS		0x25
+#define OP_KILL		0x26
 
 
 
